Bug 539601 - window.sizeMode incorrect when using full screen mode